--- a/package.json
+++ b/package.json
@@ -13,8 +13,13 @@
   "dependencies": {
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "file-saver": "^2.0.1",
+    "hbs": "^4.0.3",
+    "lodash": "^4.17.11",
     "multer": "^1.4.1",
-    "nodemon": "^1.18.10",
     "xlsx": "^0.14.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.11"
   }
 }
